Presentation: final slide added.

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -372,11 +372,11 @@ He cannot process that request, because only atomic operations are allowed.
 \begin{frame}
 \frametitle{Half signed blocks}
     \begin{figure}
-        \includegraphics<1>[scale=0.3]{images/design/crawler-1.eps}
-        \includegraphics<2>[scale=0.3]{images/design/crawler-2.eps}
-        \includegraphics<3>[scale=0.3]{images/design/crawler-3.eps}
-        \includegraphics<4>[scale=0.3]{images/design/crawler-4.eps}
-        \includegraphics<5->[scale=0.3]{images/design/crawler-5.eps}
+        \includegraphics<1>[scale=0.3]{images/design/halfsigned-chain-1.eps}
+        \includegraphics<2>[scale=0.3]{images/design/halfsigned-chain-2.eps}
+        \includegraphics<3>[scale=0.3]{images/design/halfsigned-chain-3.eps}
+        \includegraphics<4>[scale=0.3]{images/design/halfsigned-chain-4.eps}
+        \includegraphics<5->[scale=0.3]{images/design/halfsigned-chain-5.eps}
         \caption{A chain of with a half signed block in MultiChain.}
 	\end{figure}
 \end{frame}
@@ -638,5 +638,12 @@ Outgoing edges will most likely be easy to spot and can be used to identify Sybi
 \end{itemize}
 \end{frame}
 
+\begin{frame}
+\frametitle{End of the presentation}
+    \begin{figure}
+        \includegraphics<1>[scale=0.2]{images/download.jpg}
+	\end{figure}
+\center{Question time!}
+\end{frame}
 
 \end{document}
